# workshop-opencv

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
Conteúdo-do-Workshop/1-Introdução-ao-OpenCV/: index.html
Conteúdo-do-Workshop/2-Operações-Básicas/: index.html
Conteúdo-do-Workshop/3-Transformações-Geométricas/: index.html
Conteúdo-do-Workshop/4-Operações-de-Filtragem/: index.html
Conteúdo-do-Workshop/5-Operações-de-Limiarização-e-Detecção-de-Contornos/: index.html
Projeto-Final/Metodologia/: index.html
Projeto-Final/Projeto-Final/: index.html
Projeto-Final/Solução/: index.html
configuração/: index.html
docs/: Projeto-Final.md  configuração.md  index.md
docs/Conteúdo-do-Workshop/: 1-Introdução-ao-OpenCV.md  2-Operações-Básicas.md  3-Transformações-Geométricas.md  4-Operações-de-Filtragem.md  5-Operações-de-Limiarização-e-Detecção-de-Contornos.md
docs/Projeto-Final/: Metodologia.md  Projeto-Final.md  Solução.md
docs/overrides/: blog.html  landing.html
docs/overrides/partials/: posts-index.html
notebooks/: 1-introducao.ipynb  2-operacoesbasicas.ipynb  3-transformacoes.ipynb  4-filtros.ipynb  5-limiarizacao.ipynb
overrides/partials/: header.html
scripts/: movement.py
search/: search_index.json
stylesheets/: extra.css
