[tool.poetry]
name = "workshop-opencv"
version = "1.0.0"
description = ""
authors = ["Andre Mattos <carlosandrematte@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"